--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,15 +2,50 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+    font-family: "Betterworks";
+    src: url("/fonts/Betterworks.otf") format("opentype");
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "Sunydale";
+    src: url("/fonts/Sunydale.otf") format("opentype");
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "Romantically";
+    src: url("/fonts/Romantically.otf") format("opentype");
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "Quick";
+    src: url("/fonts/Quick.otf") format("opentype");
+    font-weight: normal;
+    font-style: normal;
+}
+
 .dancing-script-heading {
-    font-family: "Dancing Script", cursive;
+    font-family: "Romantically", cursive;
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
 }
 
-p, li, a {
-    font-family: "IBM Plex Sans", sans-serif;
+.sunydale {
+    font-family: "Sunydale", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+}
+
+p,
+li {
+    font-family: "Quick", sans-serif;
     font-weight: 300;
     font-style: normal;
 }
