--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -30,6 +30,7 @@
     font-style: normal;
 }
 
+
 .dancing-script-heading {
     font-family: "Romantically", cursive;
     font-optical-sizing: auto;
@@ -45,7 +46,9 @@
 
 p,
 li {
-    font-family: "Quick", sans-serif;
-    font-weight: 300;
+    font-family: "Inconsolata", monospace;
+    font-optical-sizing: auto;
+    font-weight: < weight >;
     font-style: normal;
+    font-variation-settings: "wdth" 100;
 }
