updated the front.

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -45,10 +45,14 @@
 }
 
 p,
-li {
+li, h1, h2, h3, h4, h5, h6, label, button {
     font-family: "Inconsolata", monospace;
     font-optical-sizing: auto;
     font-weight: < weight >;
     font-style: normal;
     font-variation-settings: "wdth" 100;
+}
+
+.active {
+    border-bottom: 1px solid orange;
 }
