--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -63,3 +63,12 @@ button {
 .active {
     border-bottom: 1px solid orange;
 }
+
+.tooltip {
+    @apply invisible absolute;
+}
+
+.has-tooltip:hover .tooltip {
+    @apply visible z-50;
+}
+
